sticky nav fixed

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     </nav>
     <header>
 
-      <img src="img/ribs.2nd.jpg" alt="ribs">
-
+      <!-- <img src="img/ribs.2nd.jpg" alt="ribs"> -->
+      <h1>Dave's BBQ Blog</h1>
     </header>
     <main>
-      <h1>Dave's BBQ Blog</h1>
+
       <h2>Who Says The West Coast Can't Que?</h2>
 
       <ul class="linkImages">
